# School_project

./: README.md  mhy.py
C++/exercise/: 3-10.cpp  4-11.cpp  5-17.cpp  5-2.cpp
C++/practice report/q2/: q2.cpp
C++/practice report/q4/: q4.cpp
C++/practice report/q7/: q7.cpp
C++/practice_report/q2/: q2.cpp  q2.vsdx
C++/practice_report/q4/: q4.cpp  q4vsdx.vsdx
C++/practice_report/q6/: gmon.out  q6.cpp  q6.vsdx
C++/practice_report/q7/: q7.cpp  q7.docx  q7.vsdx  ~$$q7.~vsdx
C++/practice_report/q8/: main.cpp
C++程序设计/: 3-21.cpp  5-17.cpp  5-2.cpp
Measurement_and_Control_Proram/: CMakeLists.txt  main.cpp
Measurement_and_Control_Proram/data/: data.csv
Measurement_and_Control_Proram/inc/: draw.h  matrix.h  read_data.h
Measurement_and_Control_Proram/src/: draw.cpp  matrix.cpp  read_data.cpp
电子设计基础/: README.md  总结报告.docx  绘图1.vsdx
电子设计基础/LED流水灯/: LED流水灯.docx  ~$LED流水灯.docx  绘图2.vsdx
电子设计基础/LED流水灯/LED流水灯/: test.c  test.uvopt
电子设计基础/LED流水灯/LED流水灯/Listings/: test.lst  test.m51
电子设计基础/LED流水灯/LED流水灯/Objects/: test  test.build_log.htm  test.hex
电子设计基础/LED流水灯/LED流水灯1/: test.c  test.uvproj
电子设计基础/LED流水灯/LED流水灯1/Listings/: test.lst  test.m51
电子设计基础/LED流水灯/LED流水灯1/Objects/: test  test.build_log.htm  test.hex
电子设计基础/LED流水灯/LED流水灯2/: test.c
电子设计基础/LED流水灯/LED流水灯3/: test.c  test.uvgui.guo
电子设计基础/多功能数字钟/: README.md  多功能数字钟.vsdx
电子设计基础/多功能数字钟/多功能数字钟/: 多功能数字钟.uvgui.guo  多功能数字钟.uvopt  多功能数字钟.uvproj
电子设计基础/数码管时钟/: README.md  ~$数码管时钟.docx  数码管时钟.docx  数码管时钟.vsdx
电子设计基础/数码管时钟/数码管秒表/: 数码管秒表.uvgui.guo  数码管秒表.uvopt  数码管秒表.uvproj
电子设计基础/智能小车/: 智能小车.docx
(+47 files in other folders)
